# docs/swagger.json
@@ -121,6 +121,12 @@
                         "schema": {
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
+                    },
+                    "410": {
+                        "description": "Gone",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -139,6 +145,14 @@
         "main.ShortenRequest": {
             "type": "object",
             "properties": {
+                "expires_at": {
+                    "type": "string",
+                    "example": "2026-12-31T00:00:00Z"
+                },
+                "no_expire": {
+                    "type": "boolean",
+                    "example": false
+                },
                 "url": {
                     "type": "string",
                     "example": "https://example.com"
@@ -151,6 +165,10 @@
                 "clicks": {
                     "type": "integer",
                     "example": 0
+                },
+                "expires_at": {
+                    "type": "string",
+                    "example": "2026-12-31T00:00:00Z"
                 },
                 "originalURL": {
                     "type": "string",
